--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,12 @@ matrix:
     - env: EVM_EMACS=emacs-git-snapshot-travis
 
 env:
+  - EVM_EMACS=emacs-24.3-travis
   - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
   - EVM_EMACS=emacs-25.1-travis
   - EVM_EMACS=emacs-25.2-travis
+  - EVM_EMACS=emacs-25.3-travis
   - EVM_EMACS=emacs-git-snapshot-travis
 
 before_install:
